<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wed">Wed</string>
    <string name="mon">Mon</string>
    <string name="partly_cloudy_n_24c_31c">Partly Cloudy \n 24C-31C</string>
    <string name="tue">Tue</string>
    <string name="showers_n_24c_30c">Showers \n 24C-30C</string>
</resources>