<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="40dp"
        android:background="#C0C8F6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/mon" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_brightness_high_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/partly_cloudy_n_24c_31c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tue" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_filter_drama_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/showers_n_24c_30c" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/wed" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_brightness_3_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Rain \n 22C-33C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Thu" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_filter_drama_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Scattered Showers \n 22C-27C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Fri" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_filter_drama_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Mostly Cloudy \n 22C-30C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Sat" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_filter_drama_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Partly Cloudy \n 24C-31C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Sun" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_flash_on_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Thunderstorms \n 25C-28C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Mon" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_flash_on_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Scattered Thunderstorm \n 24C-27C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Tue" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_brightness_3_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Showers 24C-26C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Wed" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_flash_on_24" />

            <EditText
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Scattered Thunderstorm \n 23C-27C" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

